--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,36 @@
-<p>home works!</p>
+<section class="hero-section py-5">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md-6">
+        <h1 class="text-primary-custom mb-4">Laverie N°1 de Lyon</h1>
+        <p class="mb-4">
+          Fondée en 1995 par Bernard et Laetitia, notre laverie a commencé comme une petite entreprise familiale. Au fil des années, grâce à notre engagement envers la qualité et le service client, nous sommes devenus la laverie de référence à Lyon. Notre histoire est marquée par une croissance constante, l'adoption de technologies innovantes et un dévouement inébranlable à satisfaire les besoins de notre communauté.
+        </p>
+        <a routerLink="/services" class="btn btn-secondary-custom btn-lg">Commander</a>
+      </div>
+      <div class="col-md-6 d-none d-md-block">
+        <div class="position-relative">
+          <img src="assets/images/t-shirts-circle.png" alt="T-shirts" class="img-fluid position-relative">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="benefits-section py-5">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md-6">
+        <h1 class="text-primary-custom mb-4">Laverie N°1 de Lyon</h1>
+        <p class="mb-4">
+          Fondée en 1995 par Bernard et Laetitia, notre laverie a commencé comme une petite entreprise familiale. Au fil des années, grâce à notre engagement envers la qualité et le service client, nous sommes devenus la laverie de référence à Lyon. Notre histoire est marquée par une croissance constante, l'adoption de technologies innovantes et un dévouement inébranlable à satisfaire les besoins de notre communauté.
+        </p>
+        <a href="#" class="btn btn-secondary-custom btn-lg">Commander</a>
+      </div>
+      <div class="col-md-6 d-none d-md-block">
+        <div class="position-relative">
+          <img src="assets/images/t-shirts-circle.png" alt="T-shirts" class="img-fluid position-relative">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
