Landing home page is complete

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
-<section class="hero-section py-5">
+<!-- Section with a story and a call to action -->
+<section class="hero-section py-0">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-md-6">
@@ -6,7 +7,7 @@
         <p class="mb-4">
           Fondée en 1995 par Bernard et Laetitia, notre laverie a commencé comme une petite entreprise familiale. Au fil des années, grâce à notre engagement envers la qualité et le service client, nous sommes devenus la laverie de référence à Lyon. Notre histoire est marquée par une croissance constante, l'adoption de technologies innovantes et un dévouement inébranlable à satisfaire les besoins de notre communauté.
         </p>
-        <a routerLink="/services" class="btn btn-secondary-custom btn-lg">Commander</a>
+        <a routerLink="/services" class="btn btn-secondary-custom btn-lg mb-2">Commander</a>
       </div>
       <div class="col-md-6 d-none d-md-block">
         <div class="position-relative">
@@ -16,21 +17,224 @@
     </div>
   </div>
 </section>
+
+<!-- Benefits section -->
 <section class="benefits-section py-5">
+  <h2 class="text-center fw-bolder mb-4">Pourquoi choisir Propre-Propre ?</h2>
   <div class="container">
-    <div class="row align-items-center">
-      <div class="col-md-6">
-        <h1 class="text-primary-custom mb-4">Laverie N°1 de Lyon</h1>
-        <p class="mb-4">
-          Fondée en 1995 par Bernard et Laetitia, notre laverie a commencé comme une petite entreprise familiale. Au fil des années, grâce à notre engagement envers la qualité et le service client, nous sommes devenus la laverie de référence à Lyon. Notre histoire est marquée par une croissance constante, l'adoption de technologies innovantes et un dévouement inébranlable à satisfaire les besoins de notre communauté.
-        </p>
-        <a href="#" class="btn btn-secondary-custom btn-lg">Commander</a>
+    <div class="row justify-content-between">
+      <div class="col-md-4 text-center">
+        <img src="assets/images/benefit-horraire.png" alt="Icône d’une horloge indiquant des horaires de service de 9h à 22h" class="img-fluid">
+        <p class="fw-bold fs-5 my-2">Horaires nocturnes</p>
+        <p>On vous attend chaque jour de 9h à 22h</p>
+        </div>
+      <div class="col-md-4 text-center">
+        <img src="assets/images/benefit-eco.png" alt="cône représentant des bulles de savon et une feuille pour indiquer l’utilisation de lessive naturelle et hypoallergénique" class="img-fluid">
+        <p class="fw-bold fs-5 my-2">Pas de chimie</p>
+        <p>On utilise uniquement la lessive naturelle et hypoallergène</p>
       </div>
-      <div class="col-md-6 d-none d-md-block">
-        <div class="position-relative">
-          <img src="assets/images/t-shirts-circle.png" alt="T-shirts" class="img-fluid position-relative">
+      <div class="col-md-4 text-center">
+        <img src="assets/images/benefit-care.png" alt="Icône de vêtements soigneusement pliés, symbolisant des vêtements propres et repassés, prêts à être utilisés" class="img-fluid">
+        <p class="fw-bold fs-5 my-2">Propres et repassés</p>
+        <p>Vous recevez vos vêtements soigneusement repassés et prêts à utiliser</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="py-5">
+  <div class="container">
+    <h2 class="text-primary-custom text-center mb-3 fw-bolder">Nos services</h2>
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-5">
+      <div class="col">
+        <div class="card h-100 border-0 rounded-5 overflow-hidden shadow-lg">
+          <img src="assets/images/lavage.webp" class="card-img-top" alt="Service de lavage">
+          <div class="card-body bg-dark text-white">
+            <h5 class="card-title">Lavage</h5>
+            <p class="card-text">Nettoyage en profondeur pour tous types de vêtements.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 border-0 rounded-5 overflow-hidden shadow-lg">
+          <img src="assets/images/nettoyage-sec.webp" class="card-img-top" alt="Service de nettoyage à sec">
+          <div class="card-body bg-primary-custom text-white">
+            <h5 class="card-title">Nettoyage à sec</h5>
+            <p class="card-text">Traitement délicat pour vos vêtements les plus précieux.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 border-0 rounded-5 overflow-hidden shadow-lg">
+          <img src="assets/images/repassage.webp" class="card-img-top" alt="Service de repassage">
+          <div class="card-body bg-secondary-custom">
+            <h5 class="card-title">Repassage</h5>
+            <p class="card-text">Finition impeccable pour un look professionnel.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 border-0 rounded-5 overflow-hidden shadow-lg">
+          <img src="assets/images/detachage.webp" class="card-img-top" alt="Service de détachage">
+          <div class="card-body bg-light">
+            <h5 class="card-title">Détachage</h5>
+            <p class="card-text">Élimination experte des taches les plus tenaces.</p>
+          </div>
         </div>
       </div>
     </div>
+  </div>
+</section>
+
+<!-- Hot offers section-->
+<section class="bg-primary-custom py-5">
+  <div class="container">
+    <h2 class="text-white text-center mb-4 fw-bolder">Les offres du mois</h2>
+    <div class="row g-3">
+      <div class="col-12 col-md-8">
+        <div class="card border-0 rounded-4 h-100">
+          <div class="card-body">
+            <h3 class="card-title h4">Option « parfumage » gratuite</h3>
+            <a routerLink="/services" class="text-primary-custom text-decoration-none">En savoir plus</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-4">
+        <div class="card border-0 rounded-4 h-100">
+          <div class="card-body d-flex flex-column justify-content-between">
+            <h3 class="card-title h4">5 kilos de literie à 20 €</h3>
+            <a routerLink="/services" class="text-primary-custom text-decoration-none">En savoir plus</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-4">
+        <div class="card border-0 rounded-4 h-100">
+          <div class="card-body d-flex flex-column justify-content-between">
+            <h3 class="card-title h4">3 chemises seulement à 15 €</h3>
+            <a routerLink="/services" class="text-primary-custom text-decoration-none">En savoir plus</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-8">
+        <div class="card border-0 rounded-4 h-100">
+          <div class="card-body">
+            <h3 class="card-title h4">On enlève et on remet vos rideaux nous-même <span class="fs-6 fw-light">sans frais supplémentaires</span></h3>
+            <a routerLink="/services" class="text-primary-custom text-decoration-none">En savoir plus</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Section about our team -->
+<section class="py-5">
+  <div class="container">
+    <h2 class="text-center mb-5 fw-bolder">Notre équipe est prête de vous accueillir chez nous</h2>
+    <div class="row align-items-center">
+      <div class="col-lg-6 position-relative mb-4 mb-lg-0 text-center">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3025.092703600283!2d3.124164579587121!3d45.7580998656952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f71ecc42d76497%3A0xa9a1c9d7248ae956!2sHuman%20Booster!5e0!3m2!1sru!2sfr!4v1723976200826!5m2!1sru!2sfr" width="450" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+      <div class="col-lg-6">
+        <ul class="list-unstyled">
+          <li class="fs-4 mb-3">
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="var(--primary)" class="bi bi-check2" viewBox="0 0 16 16">
+              <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"/>
+            </svg>
+            Service rapide et efficace pour tous vos besoins de nettoyage
+          </li>
+          <li class="fs-4 mb-3">
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="var(--primary)" class="bi bi-check2" viewBox="0 0 16 16">
+              <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"/>
+            </svg>
+            Utilisation de produits écologiques et respectueux de l'environnement
+          </li>
+          <li class="fs-4 mb-3">
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="var(--primary)" class="bi bi-check2" viewBox="0 0 16 16">
+              <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"/>
+            </svg>
+            Personnel qualifié et formé aux dernières techniques de nettoyage
+          </li>
+          <li class="fs-4 mb-3">
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="var(--primary)" class="bi bi-check2" viewBox="0 0 16 16">
+              <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"/>
+            </svg>
+            Satisfaction client garantie ou remboursement
+          </li>
+        </ul>
+        <a routerLink="/services" class="btn btn-secondary-custom btn-lg mt-4">Commander</a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- FAQ section -->
+<section class="faq-section py-5">
+  <div class="container">
+    <h2 class="text-center fw-bolder mb-3">Questions fréquentes</h2>
+    <div class="row justify-content-center">
+    <div class="accordion col-lg-8 vol-md-10 col-sm-12" id="faqAccordion">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+            Quels types de vêtements acceptez-vous pour le nettoyage ?
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Nous acceptons une large gamme de vêtements, y compris les chemises, pantalons, robes, costumes, manteaux et plus encore. Nous traitons également le linge de maison comme les draps, serviettes et rideaux. Notre équipe est formée pour prendre soin de différents types de tissus, des plus délicats aux plus robustes.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            Combien de temps faut-il pour le nettoyage et la livraison ?
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Notre délai standard est de 48 heures pour le nettoyage et la livraison. Cependant, nous proposons également un service express avec un délai de 24 heures pour un supplément modique. Les délais peuvent varier en fonction du type de vêtement et du traitement nécessaire. Nous vous communiquerons toujours un délai précis lors de la prise en charge de vos vêtements.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            Utilisez-vous des produits écologiques pour le nettoyage ?
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Oui, nous sommes engagés dans une démarche écologique. Nous utilisons des produits de nettoyage biodégradables et respectueux de l'environnement. Notre processus de nettoyage à sec utilise des solvants non toxiques et nous avons mis en place des mesures pour réduire notre consommation d'eau et d'énergie. Nous sommes constamment à la recherche de nouvelles solutions pour minimiser notre impact environnemental.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+            Proposez-vous un service de ramassage et de livraison à domicile ?
+          </button>
+        </h2>
+        <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Absolument ! Nous offrons un service pratique de ramassage et de livraison à domicile pour tous nos clients. Vous pouvez programmer un ramassage via notre site web ou notre application mobile. Nous venons chercher vos vêtements à l'adresse de votre choix et les ramenons propres et repassés directement chez vous. Ce service est disponible sans frais supplémentaires pour les commandes dépassant un certain montant.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+            Que faire si je ne suis pas satisfait du service ?
+          </button>
+        </h2>
+        <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Votre satisfaction est notre priorité. Si vous n'êtes pas entièrement satisfait de nos services, veuillez nous en informer immédiatement. Nous reprendrons vos vêtements et les retraiterons gratuitement. Si le problème persiste, nous vous offrirons un remboursement complet. Notre politique de garantie couvre également les dommages éventuels causés pendant le processus de nettoyage. N'hésitez pas à contacter notre service client pour toute préoccupation.
+          </div>
+        </div>
+      </div>
+    </div>
+      </div>
   </div>
 </section>
