--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -16,6 +16,24 @@
   z-index: 2;
 }
 
+.benefits-section {
+  background: var(--light);
+}
+.benefits-section img {
+  height: 150px;
+}
+
+.faq-section {
+  background: var(--light);
+}
+.accordion-button {
+  font-weight: bolder;
+}
+.accordion-button:not(.collapsed) {
+  color: var(--primary);
+  background-color: rgba(var(--primary-rgb), 0.1);
+}
+
 @media (max-width: 767px) {
   .hero-section h1 {
     font-size: 2.5rem;
