--- a/src/app/registration/registration.component.css
+++ b/src/app/registration/registration.component.css
@@ -51,19 +51,20 @@ button {
   display: block;
   width: 100%;
   padding: 10px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
+  /*background-color: var(--primary);*/
+  /*color: white;*/
+  /*border: none;*/
+  /*border-radius: 25px;*/
+  /*cursor: pointer;*/
+  /*font-size: 16px;*/
 }
 
 button:disabled {
-  background-color: #cccccc;
+  background-color: var(--light);
   cursor: not-allowed;
+  border-color: var(--light);
 }
 
-button:hover:not(:disabled) {
-  background-color: #0056b3;
-}
+/*button:hover:not(:disabled) {*/
+/*  background-color: var(--dark);*/
+/*}*/
